uptime-kuma/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kuma.k3s.resulaj.eu`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
